--- a/doc_template/examples_root/examples/nb/brain_observatory_monitor.ipynb
+++ b/doc_template/examples_root/examples/nb/brain_observatory_monitor.ipynb
@@ -5,10 +5,10 @@
    "id": "393c2a39",
    "metadata": {
     "papermill": {
-     "duration": 0.004949,
-     "end_time": "2023-07-31T19:11:51.637624",
+     "duration": 0.004088,
+     "end_time": "2023-02-28T21:30:18.743898",
      "exception": false,
-     "start_time": "2023-07-31T19:11:51.632675",
+     "start_time": "2023-02-28T21:30:18.739810",
      "status": "completed"
     },
     "tags": []
@@ -24,16 +24,16 @@
    "id": "0770199a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-31T19:11:51.649085Z",
-     "iopub.status.busy": "2023-07-31T19:11:51.648535Z",
-     "iopub.status.idle": "2023-07-31T19:11:51.657664Z",
-     "shell.execute_reply": "2023-07-31T19:11:51.656690Z"
+     "iopub.execute_input": "2023-02-28T21:30:18.753002Z",
+     "iopub.status.busy": "2023-02-28T21:30:18.752423Z",
+     "iopub.status.idle": "2023-02-28T21:30:18.760752Z",
+     "shell.execute_reply": "2023-02-28T21:30:18.760072Z"
     },
     "papermill": {
-     "duration": 0.01725,
-     "end_time": "2023-07-31T19:11:51.659628",
+     "duration": 0.014493,
+     "end_time": "2023-02-28T21:30:18.762286",
      "exception": false,
-     "start_time": "2023-07-31T19:11:51.642378",
+     "start_time": "2023-02-28T21:30:18.747793",
      "status": "completed"
     },
     "tags": []
@@ -49,16 +49,16 @@
    "id": "96b7108f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-31T19:11:51.669853Z",
-     "iopub.status.busy": "2023-07-31T19:11:51.668967Z",
-     "iopub.status.idle": "2023-07-31T19:11:51.673357Z",
-     "shell.execute_reply": "2023-07-31T19:11:51.672365Z"
+     "iopub.execute_input": "2023-02-28T21:30:18.770564Z",
+     "iopub.status.busy": "2023-02-28T21:30:18.770089Z",
+     "iopub.status.idle": "2023-02-28T21:30:18.773260Z",
+     "shell.execute_reply": "2023-02-28T21:30:18.772646Z"
     },
     "papermill": {
-     "duration": 0.016767,
-     "end_time": "2023-07-31T19:11:51.680469",
+     "duration": 0.008911,
+     "end_time": "2023-02-28T21:30:18.774691",
      "exception": false,
-     "start_time": "2023-07-31T19:11:51.663702",
+     "start_time": "2023-02-28T21:30:18.765780",
      "status": "completed"
     },
     "tags": [
@@ -77,16 +77,16 @@
    "metadata": {
     "collapsed": true,
     "execution": {
-     "iopub.execute_input": "2023-07-31T19:11:51.715193Z",
-     "iopub.status.busy": "2023-07-31T19:11:51.714611Z",
-     "iopub.status.idle": "2023-07-31T19:11:55.942952Z",
-     "shell.execute_reply": "2023-07-31T19:11:55.941904Z"
+     "iopub.execute_input": "2023-02-28T21:30:18.795134Z",
+     "iopub.status.busy": "2023-02-28T21:30:18.794565Z",
+     "iopub.status.idle": "2023-02-28T21:30:21.679910Z",
+     "shell.execute_reply": "2023-02-28T21:30:21.679189Z"
     },
     "papermill": {
-     "duration": 4.235855,
-     "end_time": "2023-07-31T19:11:55.945338",
+     "duration": 2.891376,
+     "end_time": "2023-02-28T21:30:21.681664",
      "exception": false,
-     "start_time": "2023-07-31T19:11:51.709483",
+     "start_time": "2023-02-28T21:30:18.790288",
      "status": "completed"
     },
     "tags": []
@@ -109,10 +109,10 @@
    "id": "0c5a54a3",
    "metadata": {
     "papermill": {
-     "duration": 0.004308,
-     "end_time": "2023-07-31T19:11:55.955074",
+     "duration": 0.003673,
+     "end_time": "2023-02-28T21:30:21.689088",
      "exception": false,
-     "start_time": "2023-07-31T19:11:55.950766",
+     "start_time": "2023-02-28T21:30:21.685415",
      "status": "completed"
     },
     "tags": []
@@ -127,16 +127,16 @@
    "id": "1d80b72a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-31T19:11:55.965646Z",
-     "iopub.status.busy": "2023-07-31T19:11:55.964846Z",
-     "iopub.status.idle": "2023-07-31T19:12:17.457398Z",
-     "shell.execute_reply": "2023-07-31T19:12:17.456416Z"
+     "iopub.execute_input": "2023-02-28T21:30:21.697579Z",
+     "iopub.status.busy": "2023-02-28T21:30:21.696746Z",
+     "iopub.status.idle": "2023-02-28T21:30:52.469025Z",
+     "shell.execute_reply": "2023-02-28T21:30:52.468425Z"
     },
     "papermill": {
-     "duration": 21.500645,
-     "end_time": "2023-07-31T19:12:17.459841",
+     "duration": 30.779827,
+     "end_time": "2023-02-28T21:30:52.472250",
      "exception": false,
-     "start_time": "2023-07-31T19:11:55.959196",
+     "start_time": "2023-02-28T21:30:21.692423",
      "status": "completed"
     },
     "tags": []
@@ -146,7 +146,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-31 19:11:56,213 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/528017428\n"
+      "2023-02-28 21:30:21,804 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/528017428\n"
      ]
     },
     {
@@ -248,10 +248,10 @@
    "id": "615603f0",
    "metadata": {
     "papermill": {
-     "duration": 0.004553,
-     "end_time": "2023-07-31T19:12:17.471573",
+     "duration": 0.003709,
+     "end_time": "2023-02-28T21:30:52.479862",
      "exception": false,
-     "start_time": "2023-07-31T19:12:17.467020",
+     "start_time": "2023-02-28T21:30:52.476153",
      "status": "completed"
     },
     "tags": []
@@ -266,16 +266,16 @@
    "id": "b84d9a20",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-31T19:12:17.482490Z",
-     "iopub.status.busy": "2023-07-31T19:12:17.481943Z",
-     "iopub.status.idle": "2023-07-31T19:12:18.087456Z",
-     "shell.execute_reply": "2023-07-31T19:12:18.086462Z"
+     "iopub.execute_input": "2023-02-28T21:30:52.488759Z",
+     "iopub.status.busy": "2023-02-28T21:30:52.488187Z",
+     "iopub.status.idle": "2023-02-28T21:30:52.846431Z",
+     "shell.execute_reply": "2023-02-28T21:30:52.845707Z"
     },
     "papermill": {
-     "duration": 0.613622,
-     "end_time": "2023-07-31T19:12:18.089692",
+     "duration": 0.364633,
+     "end_time": "2023-02-28T21:30:52.848120",
      "exception": false,
-     "start_time": "2023-07-31T19:12:17.476070",
+     "start_time": "2023-02-28T21:30:52.483487",
      "status": "completed"
     },
     "tags": []
@@ -307,10 +307,10 @@
    "id": "642c4135",
    "metadata": {
     "papermill": {
-     "duration": 0.004851,
-     "end_time": "2023-07-31T19:12:18.099497",
+     "duration": 0.004216,
+     "end_time": "2023-02-28T21:30:52.856344",
      "exception": false,
-     "start_time": "2023-07-31T19:12:18.094646",
+     "start_time": "2023-02-28T21:30:52.852128",
      "status": "completed"
     },
     "tags": []
@@ -325,16 +325,16 @@
    "id": "a44cc00c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-31T19:12:18.111453Z",
-     "iopub.status.busy": "2023-07-31T19:12:18.111124Z",
-     "iopub.status.idle": "2023-07-31T19:12:18.323606Z",
-     "shell.execute_reply": "2023-07-31T19:12:18.322619Z"
+     "iopub.execute_input": "2023-02-28T21:30:52.865414Z",
+     "iopub.status.busy": "2023-02-28T21:30:52.864723Z",
+     "iopub.status.idle": "2023-02-28T21:30:53.071152Z",
+     "shell.execute_reply": "2023-02-28T21:30:53.070497Z"
     },
     "papermill": {
-     "duration": 0.221195,
-     "end_time": "2023-07-31T19:12:18.325826",
+     "duration": 0.212857,
+     "end_time": "2023-02-28T21:30:53.072891",
      "exception": false,
-     "start_time": "2023-07-31T19:12:18.104631",
+     "start_time": "2023-02-28T21:30:52.860034",
      "status": "completed"
     },
     "tags": []
@@ -360,10 +360,10 @@
    "id": "92555290",
    "metadata": {
     "papermill": {
-     "duration": 0.00504,
-     "end_time": "2023-07-31T19:12:18.336122",
+     "duration": 0.004205,
+     "end_time": "2023-02-28T21:30:53.081380",
      "exception": false,
-     "start_time": "2023-07-31T19:12:18.331082",
+     "start_time": "2023-02-28T21:30:53.077175",
      "status": "completed"
     },
     "tags": []
@@ -378,16 +378,16 @@
    "id": "ffe96a0c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-31T19:12:18.348349Z",
-     "iopub.status.busy": "2023-07-31T19:12:18.347566Z",
-     "iopub.status.idle": "2023-07-31T19:12:20.445505Z",
-     "shell.execute_reply": "2023-07-31T19:12:20.444509Z"
+     "iopub.execute_input": "2023-02-28T21:30:53.091049Z",
+     "iopub.status.busy": "2023-02-28T21:30:53.090350Z",
+     "iopub.status.idle": "2023-02-28T21:30:54.499653Z",
+     "shell.execute_reply": "2023-02-28T21:30:54.498873Z"
     },
     "papermill": {
-     "duration": 2.106903,
-     "end_time": "2023-07-31T19:12:20.448012",
+     "duration": 1.416068,
+     "end_time": "2023-02-28T21:30:54.501365",
      "exception": false,
-     "start_time": "2023-07-31T19:12:18.341109",
+     "start_time": "2023-02-28T21:30:53.085297",
      "status": "completed"
     },
     "tags": []
@@ -415,10 +415,10 @@
    "id": "63d4282d",
    "metadata": {
     "papermill": {
-     "duration": 0.005802,
-     "end_time": "2023-07-31T19:12:20.459859",
+     "duration": 0.004637,
+     "end_time": "2023-02-28T21:30:54.510538",
      "exception": false,
-     "start_time": "2023-07-31T19:12:20.454057",
+     "start_time": "2023-02-28T21:30:54.505901",
      "status": "completed"
     },
     "tags": []
@@ -433,16 +433,16 @@
    "id": "00053c56",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-31T19:12:20.471571Z",
-     "iopub.status.busy": "2023-07-31T19:12:20.471205Z",
-     "iopub.status.idle": "2023-07-31T19:12:25.488730Z",
-     "shell.execute_reply": "2023-07-31T19:12:25.487725Z"
+     "iopub.execute_input": "2023-02-28T21:30:54.520259Z",
+     "iopub.status.busy": "2023-02-28T21:30:54.519991Z",
+     "iopub.status.idle": "2023-02-28T21:30:57.714227Z",
+     "shell.execute_reply": "2023-02-28T21:30:57.713492Z"
     },
     "papermill": {
-     "duration": 5.026457,
-     "end_time": "2023-07-31T19:12:25.491389",
+     "duration": 3.201532,
+     "end_time": "2023-02-28T21:30:57.716287",
      "exception": false,
-     "start_time": "2023-07-31T19:12:20.464932",
+     "start_time": "2023-02-28T21:30:54.514755",
      "status": "completed"
     },
     "tags": []
@@ -470,10 +470,10 @@
    "id": "aaaea49f",
    "metadata": {
     "papermill": {
-     "duration": 0.00563,
-     "end_time": "2023-07-31T19:12:25.503125",
+     "duration": 0.00424,
+     "end_time": "2023-02-28T21:30:57.725216",
      "exception": false,
-     "start_time": "2023-07-31T19:12:25.497495",
+     "start_time": "2023-02-28T21:30:57.720976",
      "status": "completed"
     },
     "tags": []
@@ -488,16 +488,16 @@
    "id": "5a22dfea",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-31T19:12:25.516223Z",
-     "iopub.status.busy": "2023-07-31T19:12:25.515863Z",
-     "iopub.status.idle": "2023-07-31T19:12:36.996952Z",
-     "shell.execute_reply": "2023-07-31T19:12:36.996101Z"
+     "iopub.execute_input": "2023-02-28T21:30:57.735346Z",
+     "iopub.status.busy": "2023-02-28T21:30:57.734912Z",
+     "iopub.status.idle": "2023-02-28T21:31:05.157190Z",
+     "shell.execute_reply": "2023-02-28T21:31:05.156439Z"
     },
     "papermill": {
-     "duration": 11.490202,
-     "end_time": "2023-07-31T19:12:36.999111",
+     "duration": 7.429383,
+     "end_time": "2023-02-28T21:31:05.158872",
      "exception": false,
-     "start_time": "2023-07-31T19:12:25.508909",
+     "start_time": "2023-02-28T21:30:57.729489",
      "status": "completed"
     },
     "tags": []
@@ -570,10 +570,10 @@
    "id": "264b6f1d",
    "metadata": {
     "papermill": {
-     "duration": 0.006743,
-     "end_time": "2023-07-31T19:12:37.014685",
+     "duration": 0.006159,
+     "end_time": "2023-02-28T21:31:05.171800",
      "exception": false,
-     "start_time": "2023-07-31T19:12:37.007942",
+     "start_time": "2023-02-28T21:31:05.165641",
      "status": "completed"
     },
     "tags": []
@@ -587,10 +587,10 @@
    "id": "dfaab4e6",
    "metadata": {
     "papermill": {
-     "duration": 0.006908,
-     "end_time": "2023-07-31T19:12:37.028125",
+     "duration": 0.005989,
+     "end_time": "2023-02-28T21:31:05.183699",
      "exception": false,
-     "start_time": "2023-07-31T19:12:37.021217",
+     "start_time": "2023-02-28T21:31:05.177710",
      "status": "completed"
     },
     "tags": []
@@ -605,16 +605,16 @@
    "id": "50ef0982",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-31T19:12:37.042945Z",
-     "iopub.status.busy": "2023-07-31T19:12:37.042576Z",
-     "iopub.status.idle": "2023-07-31T19:12:43.571488Z",
-     "shell.execute_reply": "2023-07-31T19:12:43.570589Z"
+     "iopub.execute_input": "2023-02-28T21:31:05.196826Z",
+     "iopub.status.busy": "2023-02-28T21:31:05.196530Z",
+     "iopub.status.idle": "2023-02-28T21:31:09.345064Z",
+     "shell.execute_reply": "2023-02-28T21:31:09.344340Z"
     },
     "papermill": {
-     "duration": 6.539007,
-     "end_time": "2023-07-31T19:12:43.573584",
+     "duration": 4.157509,
+     "end_time": "2023-02-28T21:31:09.346982",
      "exception": false,
-     "start_time": "2023-07-31T19:12:37.034577",
+     "start_time": "2023-02-28T21:31:05.189473",
      "status": "completed"
     },
     "tags": []
@@ -676,21 +676,21 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.8.16"
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 54.174247,
-   "end_time": "2023-07-31T19:12:44.303175",
+   "duration": 52.26514,
+   "end_time": "2023-02-28T21:31:09.874368",
    "environment_variables": {},
    "exception": null,
    "input_path": "doc_template/examples_root/examples/nb/brain_observatory_monitor.ipynb",
-   "output_path": "/tmp/tmpx0w3r040/scratch_nb.ipynb",
+   "output_path": "/tmp/tmpn3u_fvoj/scratch_nb.ipynb",
    "parameters": {
-    "output_dir": "/tmp/tmpx0w3r040",
+    "output_dir": "/tmp/tmpn3u_fvoj",
     "resources_dir": "/home/runner/work/AllenSDK/AllenSDK/allensdk/internal/notebooks/resources"
    },
-   "start_time": "2023-07-31T19:11:50.128928",
+   "start_time": "2023-02-28T21:30:17.609228",
    "version": "2.4.0"
   }
  },
