--- a/doc_template/examples_root/examples/nb/brain_observatory_stimuli.ipynb
+++ b/doc_template/examples_root/examples/nb/brain_observatory_stimuli.ipynb
@@ -5,10 +5,10 @@
    "id": "0698dc8f",
    "metadata": {
     "papermill": {
-     "duration": 0.005108,
-     "end_time": "2023-07-31T21:52:33.898514",
+     "duration": 0.004534,
+     "end_time": "2023-02-28T21:34:45.674840",
      "exception": false,
-     "start_time": "2023-07-31T21:52:33.893406",
+     "start_time": "2023-02-28T21:34:45.670306",
      "status": "completed"
     },
     "tags": []
@@ -26,16 +26,16 @@
    "id": "5a52e7ef",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-31T21:52:33.910060Z",
-     "iopub.status.busy": "2023-07-31T21:52:33.909354Z",
-     "iopub.status.idle": "2023-07-31T21:52:33.918309Z",
-     "shell.execute_reply": "2023-07-31T21:52:33.917307Z"
+     "iopub.execute_input": "2023-02-28T21:34:45.683882Z",
+     "iopub.status.busy": "2023-02-28T21:34:45.683562Z",
+     "iopub.status.idle": "2023-02-28T21:34:45.692214Z",
+     "shell.execute_reply": "2023-02-28T21:34:45.691524Z"
     },
     "papermill": {
-     "duration": 0.016847,
-     "end_time": "2023-07-31T21:52:33.920379",
+     "duration": 0.014854,
+     "end_time": "2023-02-28T21:34:45.693742",
      "exception": false,
-     "start_time": "2023-07-31T21:52:33.903532",
+     "start_time": "2023-02-28T21:34:45.678888",
      "status": "completed"
     },
     "tags": []
@@ -51,16 +51,16 @@
    "id": "1138f1cb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-31T21:52:33.932872Z",
-     "iopub.status.busy": "2023-07-31T21:52:33.932507Z",
-     "iopub.status.idle": "2023-07-31T21:52:33.936658Z",
-     "shell.execute_reply": "2023-07-31T21:52:33.935698Z"
+     "iopub.execute_input": "2023-02-28T21:34:45.702789Z",
+     "iopub.status.busy": "2023-02-28T21:34:45.702271Z",
+     "iopub.status.idle": "2023-02-28T21:34:45.705520Z",
+     "shell.execute_reply": "2023-02-28T21:34:45.704985Z"
     },
     "papermill": {
-     "duration": 0.012457,
-     "end_time": "2023-07-31T21:52:33.938591",
+     "duration": 0.009406,
+     "end_time": "2023-02-28T21:34:45.707095",
      "exception": false,
-     "start_time": "2023-07-31T21:52:33.926134",
+     "start_time": "2023-02-28T21:34:45.697689",
      "status": "completed"
     },
     "tags": [
@@ -78,16 +78,16 @@
    "id": "be1c0a7f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-31T21:52:33.971949Z",
-     "iopub.status.busy": "2023-07-31T21:52:33.971370Z",
-     "iopub.status.idle": "2023-07-31T21:52:34.348009Z",
-     "shell.execute_reply": "2023-07-31T21:52:34.346925Z"
+     "iopub.execute_input": "2023-02-28T21:34:45.729935Z",
+     "iopub.status.busy": "2023-02-28T21:34:45.729447Z",
+     "iopub.status.idle": "2023-02-28T21:34:46.119413Z",
+     "shell.execute_reply": "2023-02-28T21:34:46.118745Z"
     },
     "papermill": {
-     "duration": 0.38745,
-     "end_time": "2023-07-31T21:52:34.350464",
+     "duration": 0.396501,
+     "end_time": "2023-02-28T21:34:46.121416",
      "exception": false,
-     "start_time": "2023-07-31T21:52:33.963014",
+     "start_time": "2023-02-28T21:34:45.724915",
      "status": "completed"
     },
     "tags": []
@@ -120,10 +120,10 @@
    "id": "57a3dd75",
    "metadata": {
     "papermill": {
-     "duration": 0.004697,
-     "end_time": "2023-07-31T21:52:34.360873",
+     "duration": 0.003831,
+     "end_time": "2023-02-28T21:34:46.129154",
      "exception": false,
-     "start_time": "2023-07-31T21:52:34.356176",
+     "start_time": "2023-02-28T21:34:46.125323",
      "status": "completed"
     },
     "tags": []
@@ -139,16 +139,16 @@
    "id": "86d015a4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-31T21:52:34.373108Z",
-     "iopub.status.busy": "2023-07-31T21:52:34.372476Z",
-     "iopub.status.idle": "2023-07-31T21:52:59.423713Z",
-     "shell.execute_reply": "2023-07-31T21:52:59.422385Z"
+     "iopub.execute_input": "2023-02-28T21:34:46.137998Z",
+     "iopub.status.busy": "2023-02-28T21:34:46.137255Z",
+     "iopub.status.idle": "2023-02-28T21:35:16.557519Z",
+     "shell.execute_reply": "2023-02-28T21:35:16.555565Z"
     },
     "papermill": {
-     "duration": 25.059502,
-     "end_time": "2023-07-31T21:52:59.425586",
+     "duration": 30.431107,
+     "end_time": "2023-02-28T21:35:16.563810",
      "exception": false,
-     "start_time": "2023-07-31T21:52:34.366084",
+     "start_time": "2023-02-28T21:34:46.132703",
      "status": "completed"
     },
     "tags": []
@@ -158,7 +158,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-31 21:52:37,376 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/514340576\n"
+      "2023-02-28 21:34:48,822 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/514340576\n"
      ]
     },
     {
@@ -193,10 +193,10 @@
    "id": "abc48527",
    "metadata": {
     "papermill": {
-     "duration": 0.004522,
-     "end_time": "2023-07-31T21:52:59.435181",
+     "duration": 0.004096,
+     "end_time": "2023-02-28T21:35:16.594375",
      "exception": false,
-     "start_time": "2023-07-31T21:52:59.430659",
+     "start_time": "2023-02-28T21:35:16.590279",
      "status": "completed"
     },
     "tags": []
@@ -212,16 +212,16 @@
    "id": "5c8b0144",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-31T21:52:59.446221Z",
-     "iopub.status.busy": "2023-07-31T21:52:59.444957Z",
-     "iopub.status.idle": "2023-07-31T21:53:18.165702Z",
-     "shell.execute_reply": "2023-07-31T21:53:18.164758Z"
+     "iopub.execute_input": "2023-02-28T21:35:16.604279Z",
+     "iopub.status.busy": "2023-02-28T21:35:16.603278Z",
+     "iopub.status.idle": "2023-02-28T21:35:36.206666Z",
+     "shell.execute_reply": "2023-02-28T21:35:36.205510Z"
     },
     "papermill": {
-     "duration": 18.728278,
-     "end_time": "2023-07-31T21:53:18.167671",
+     "duration": 19.610068,
+     "end_time": "2023-02-28T21:35:36.208329",
      "exception": false,
-     "start_time": "2023-07-31T21:52:59.439393",
+     "start_time": "2023-02-28T21:35:16.598261",
      "status": "completed"
     },
     "tags": []
@@ -231,7 +231,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-31 21:52:59,543 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/514422179\n"
+      "2023-02-28 21:35:16,715 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/514422179\n"
      ]
     },
     {
@@ -266,10 +266,10 @@
    "id": "bb211aeb",
    "metadata": {
     "papermill": {
-     "duration": 0.005182,
-     "end_time": "2023-07-31T21:53:18.179136",
+     "duration": 0.004392,
+     "end_time": "2023-02-28T21:35:36.217354",
      "exception": false,
-     "start_time": "2023-07-31T21:53:18.173954",
+     "start_time": "2023-02-28T21:35:36.212962",
      "status": "completed"
     },
     "tags": []
@@ -285,16 +285,16 @@
    "id": "7da6fa06",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-31T21:53:18.190918Z",
-     "iopub.status.busy": "2023-07-31T21:53:18.190341Z",
-     "iopub.status.idle": "2023-07-31T21:53:20.214285Z",
-     "shell.execute_reply": "2023-07-31T21:53:20.213375Z"
+     "iopub.execute_input": "2023-02-28T21:35:36.228107Z",
+     "iopub.status.busy": "2023-02-28T21:35:36.227302Z",
+     "iopub.status.idle": "2023-02-28T21:35:37.993830Z",
+     "shell.execute_reply": "2023-02-28T21:35:37.993134Z"
     },
     "papermill": {
-     "duration": 2.032489,
-     "end_time": "2023-07-31T21:53:20.216589",
+     "duration": 1.776764,
+     "end_time": "2023-02-28T21:35:37.998286",
      "exception": false,
-     "start_time": "2023-07-31T21:53:18.184100",
+     "start_time": "2023-02-28T21:35:36.221522",
      "status": "completed"
     },
     "tags": []
@@ -332,10 +332,10 @@
    "id": "09357f1b",
    "metadata": {
     "papermill": {
-     "duration": 0.006588,
-     "end_time": "2023-07-31T21:53:20.230206",
+     "duration": 0.005904,
+     "end_time": "2023-02-28T21:35:38.010611",
      "exception": false,
-     "start_time": "2023-07-31T21:53:20.223618",
+     "start_time": "2023-02-28T21:35:38.004707",
      "status": "completed"
     },
     "tags": []
@@ -350,16 +350,16 @@
    "id": "c40e2880",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-31T21:53:20.244961Z",
-     "iopub.status.busy": "2023-07-31T21:53:20.244591Z",
-     "iopub.status.idle": "2023-07-31T21:53:20.533664Z",
-     "shell.execute_reply": "2023-07-31T21:53:20.532617Z"
+     "iopub.execute_input": "2023-02-28T21:35:38.026087Z",
+     "iopub.status.busy": "2023-02-28T21:35:38.025512Z",
+     "iopub.status.idle": "2023-02-28T21:35:38.205498Z",
+     "shell.execute_reply": "2023-02-28T21:35:38.204772Z"
     },
     "papermill": {
-     "duration": 0.29936,
-     "end_time": "2023-07-31T21:53:20.536108",
+     "duration": 0.188685,
+     "end_time": "2023-02-28T21:35:38.207148",
      "exception": false,
-     "start_time": "2023-07-31T21:53:20.236748",
+     "start_time": "2023-02-28T21:35:38.018463",
      "status": "completed"
     },
     "tags": []
@@ -397,10 +397,10 @@
    "id": "fed7f6ce",
    "metadata": {
     "papermill": {
-     "duration": 0.008083,
-     "end_time": "2023-07-31T21:53:20.551666",
+     "duration": 0.006338,
+     "end_time": "2023-02-28T21:35:38.219986",
      "exception": false,
-     "start_time": "2023-07-31T21:53:20.543583",
+     "start_time": "2023-02-28T21:35:38.213648",
      "status": "completed"
     },
     "tags": []
@@ -416,16 +416,16 @@
    "id": "a0b0297a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-31T21:53:20.566950Z",
-     "iopub.status.busy": "2023-07-31T21:53:20.566583Z",
-     "iopub.status.idle": "2023-07-31T21:53:21.597524Z",
-     "shell.execute_reply": "2023-07-31T21:53:21.595877Z"
+     "iopub.execute_input": "2023-02-28T21:35:38.233349Z",
+     "iopub.status.busy": "2023-02-28T21:35:38.233069Z",
+     "iopub.status.idle": "2023-02-28T21:35:39.174306Z",
+     "shell.execute_reply": "2023-02-28T21:35:39.173589Z"
     },
     "papermill": {
-     "duration": 1.042174,
-     "end_time": "2023-07-31T21:53:21.600633",
+     "duration": 0.950496,
+     "end_time": "2023-02-28T21:35:39.176497",
      "exception": false,
-     "start_time": "2023-07-31T21:53:20.558459",
+     "start_time": "2023-02-28T21:35:38.226001",
      "status": "completed"
     },
     "tags": []
@@ -461,10 +461,10 @@
    "id": "cd9cdd9a",
    "metadata": {
     "papermill": {
-     "duration": 0.008355,
-     "end_time": "2023-07-31T21:53:21.618239",
+     "duration": 0.007644,
+     "end_time": "2023-02-28T21:35:39.192033",
      "exception": false,
-     "start_time": "2023-07-31T21:53:21.609884",
+     "start_time": "2023-02-28T21:35:39.184389",
      "status": "completed"
     },
     "tags": []
@@ -479,16 +479,16 @@
    "id": "7ffd1a18",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-31T21:53:21.636104Z",
-     "iopub.status.busy": "2023-07-31T21:53:21.635333Z",
-     "iopub.status.idle": "2023-07-31T21:53:22.269203Z",
-     "shell.execute_reply": "2023-07-31T21:53:22.268151Z"
+     "iopub.execute_input": "2023-02-28T21:35:39.208579Z",
+     "iopub.status.busy": "2023-02-28T21:35:39.207867Z",
+     "iopub.status.idle": "2023-02-28T21:35:39.599206Z",
+     "shell.execute_reply": "2023-02-28T21:35:39.598477Z"
     },
     "papermill": {
-     "duration": 0.646301,
-     "end_time": "2023-07-31T21:53:22.272143",
+     "duration": 0.401509,
+     "end_time": "2023-02-28T21:35:39.600942",
      "exception": false,
-     "start_time": "2023-07-31T21:53:21.625842",
+     "start_time": "2023-02-28T21:35:39.199433",
      "status": "completed"
     },
     "tags": []
@@ -523,10 +523,10 @@
    "id": "d64df66f",
    "metadata": {
     "papermill": {
-     "duration": 0.009241,
-     "end_time": "2023-07-31T21:53:22.295508",
+     "duration": 0.007943,
+     "end_time": "2023-02-28T21:35:39.616790",
      "exception": false,
-     "start_time": "2023-07-31T21:53:22.286267",
+     "start_time": "2023-02-28T21:35:39.608847",
      "status": "completed"
     },
     "tags": []
@@ -542,16 +542,16 @@
    "id": "045e1866",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-31T21:53:22.318033Z",
-     "iopub.status.busy": "2023-07-31T21:53:22.317309Z",
-     "iopub.status.idle": "2023-07-31T21:53:55.411901Z",
-     "shell.execute_reply": "2023-07-31T21:53:55.410890Z"
+     "iopub.execute_input": "2023-02-28T21:35:39.634019Z",
+     "iopub.status.busy": "2023-02-28T21:35:39.633564Z",
+     "iopub.status.idle": "2023-02-28T21:36:09.189098Z",
+     "shell.execute_reply": "2023-02-28T21:36:09.188437Z"
     },
     "papermill": {
-     "duration": 33.116199,
-     "end_time": "2023-07-31T21:53:55.422276",
+     "duration": 29.565773,
+     "end_time": "2023-02-28T21:36:09.190734",
      "exception": false,
-     "start_time": "2023-07-31T21:53:22.306077",
+     "start_time": "2023-02-28T21:35:39.624961",
      "status": "completed"
     },
     "tags": []
@@ -561,7 +561,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-31 21:53:22,419 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/516238128\n"
+      "2023-02-28 21:35:39,771 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/516238128\n"
      ]
     },
     {
@@ -596,10 +596,10 @@
    "id": "af3112c7",
    "metadata": {
     "papermill": {
-     "duration": 0.009019,
-     "end_time": "2023-07-31T21:53:55.441379",
+     "duration": 0.008089,
+     "end_time": "2023-02-28T21:36:09.206998",
      "exception": false,
-     "start_time": "2023-07-31T21:53:55.432360",
+     "start_time": "2023-02-28T21:36:09.198909",
      "status": "completed"
     },
     "tags": []
@@ -614,16 +614,16 @@
    "id": "86abe247",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-31T21:53:55.467389Z",
-     "iopub.status.busy": "2023-07-31T21:53:55.466342Z",
-     "iopub.status.idle": "2023-07-31T21:53:55.744534Z",
-     "shell.execute_reply": "2023-07-31T21:53:55.743452Z"
+     "iopub.execute_input": "2023-02-28T21:36:09.224351Z",
+     "iopub.status.busy": "2023-02-28T21:36:09.223571Z",
+     "iopub.status.idle": "2023-02-28T21:36:09.386489Z",
+     "shell.execute_reply": "2023-02-28T21:36:09.385754Z"
     },
     "papermill": {
-     "duration": 0.296243,
-     "end_time": "2023-07-31T21:53:55.747765",
+     "duration": 0.173466,
+     "end_time": "2023-02-28T21:36:09.388186",
      "exception": false,
-     "start_time": "2023-07-31T21:53:55.451522",
+     "start_time": "2023-02-28T21:36:09.214720",
      "status": "completed"
     },
     "tags": []
@@ -675,21 +675,21 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.8.16"
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 83.579966,
-   "end_time": "2023-07-31T21:53:56.479048",
+   "duration": 85.260232,
+   "end_time": "2023-02-28T21:36:09.815213",
    "environment_variables": {},
    "exception": null,
    "input_path": "doc_template/examples_root/examples/nb/brain_observatory_stimuli.ipynb",
-   "output_path": "/tmp/tmpcr4bcu16/scratch_nb.ipynb",
+   "output_path": "/tmp/tmp59ra08ug/scratch_nb.ipynb",
    "parameters": {
-    "output_dir": "/tmp/tmpcr4bcu16",
+    "output_dir": "/tmp/tmp59ra08ug",
     "resources_dir": "/home/runner/work/AllenSDK/AllenSDK/allensdk/internal/notebooks/resources"
    },
-   "start_time": "2023-07-31T21:52:32.899082",
+   "start_time": "2023-02-28T21:34:44.554981",
    "version": "2.4.0"
   }
  },
