--- a/doc_template/examples_root/examples/nb/cell_specimen_mapping.ipynb
+++ b/doc_template/examples_root/examples/nb/cell_specimen_mapping.ipynb
@@ -5,10 +5,10 @@
    "id": "ab898518",
    "metadata": {
     "papermill": {
-     "duration": 0.004056,
-     "end_time": "2023-07-31T19:58:49.537531",
+     "duration": 0.003081,
+     "end_time": "2023-02-28T21:17:34.532684",
      "exception": false,
-     "start_time": "2023-07-31T19:58:49.533475",
+     "start_time": "2023-02-28T21:17:34.529603",
      "status": "completed"
     },
     "tags": []
@@ -25,10 +25,10 @@
    "id": "2457b067",
    "metadata": {
     "papermill": {
-     "duration": 0.002569,
-     "end_time": "2023-07-31T19:58:49.543213",
+     "duration": 0.002069,
+     "end_time": "2023-02-28T21:17:34.537237",
      "exception": false,
-     "start_time": "2023-07-31T19:58:49.540644",
+     "start_time": "2023-02-28T21:17:34.535168",
      "status": "completed"
     },
     "tags": []
@@ -44,16 +44,16 @@
    "id": "6c46abcb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-31T19:58:49.550756Z",
-     "iopub.status.busy": "2023-07-31T19:58:49.550214Z",
-     "iopub.status.idle": "2023-07-31T19:58:49.559356Z",
-     "shell.execute_reply": "2023-07-31T19:58:49.558318Z"
+     "iopub.execute_input": "2023-02-28T21:17:34.542940Z",
+     "iopub.status.busy": "2023-02-28T21:17:34.542487Z",
+     "iopub.status.idle": "2023-02-28T21:17:34.551184Z",
+     "shell.execute_reply": "2023-02-28T21:17:34.550478Z"
     },
     "papermill": {
-     "duration": 0.015639,
-     "end_time": "2023-07-31T19:58:49.561367",
+     "duration": 0.013391,
+     "end_time": "2023-02-28T21:17:34.552729",
      "exception": false,
-     "start_time": "2023-07-31T19:58:49.545728",
+     "start_time": "2023-02-28T21:17:34.539338",
      "status": "completed"
     },
     "tags": []
@@ -69,16 +69,16 @@
    "id": "6ac4bacf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-31T19:58:49.568290Z",
-     "iopub.status.busy": "2023-07-31T19:58:49.567650Z",
-     "iopub.status.idle": "2023-07-31T19:58:49.572062Z",
-     "shell.execute_reply": "2023-07-31T19:58:49.571150Z"
+     "iopub.execute_input": "2023-02-28T21:17:34.558446Z",
+     "iopub.status.busy": "2023-02-28T21:17:34.557963Z",
+     "iopub.status.idle": "2023-02-28T21:17:34.561142Z",
+     "shell.execute_reply": "2023-02-28T21:17:34.560532Z"
     },
     "papermill": {
-     "duration": 0.010014,
-     "end_time": "2023-07-31T19:58:49.574001",
+     "duration": 0.007518,
+     "end_time": "2023-02-28T21:17:34.562505",
      "exception": false,
-     "start_time": "2023-07-31T19:58:49.563987",
+     "start_time": "2023-02-28T21:17:34.554987",
      "status": "completed"
     },
     "tags": [
@@ -96,16 +96,16 @@
    "id": "2db02eeb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-31T19:58:49.593573Z",
-     "iopub.status.busy": "2023-07-31T19:58:49.592853Z",
-     "iopub.status.idle": "2023-07-31T19:58:52.824256Z",
-     "shell.execute_reply": "2023-07-31T19:58:52.823253Z"
+     "iopub.execute_input": "2023-02-28T21:17:34.577668Z",
+     "iopub.status.busy": "2023-02-28T21:17:34.577137Z",
+     "iopub.status.idle": "2023-02-28T21:17:37.430302Z",
+     "shell.execute_reply": "2023-02-28T21:17:37.429570Z"
     },
     "papermill": {
-     "duration": 3.237029,
-     "end_time": "2023-07-31T19:58:52.826381",
+     "duration": 2.85777,
+     "end_time": "2023-02-28T21:17:37.432108",
      "exception": false,
-     "start_time": "2023-07-31T19:58:49.589352",
+     "start_time": "2023-02-28T21:17:34.574338",
      "status": "completed"
     },
     "tags": []
@@ -115,7 +115,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-31 19:58:52,031 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/590985414\n"
+      "2023-02-28 21:17:36,959 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/590985414\n"
      ]
     },
     {
@@ -153,10 +153,10 @@
    "metadata": {
     "collapsed": true,
     "papermill": {
-     "duration": 0.006554,
-     "end_time": "2023-07-31T19:58:52.836211",
+     "duration": 0.002339,
+     "end_time": "2023-02-28T21:17:37.437075",
      "exception": false,
-     "start_time": "2023-07-31T19:58:52.829657",
+     "start_time": "2023-02-28T21:17:37.434736",
      "status": "completed"
     },
     "tags": []
@@ -172,16 +172,16 @@
    "id": "187b40f8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-31T19:58:52.843661Z",
-     "iopub.status.busy": "2023-07-31T19:58:52.843121Z",
-     "iopub.status.idle": "2023-07-31T19:58:52.860384Z",
-     "shell.execute_reply": "2023-07-31T19:58:52.859513Z"
+     "iopub.execute_input": "2023-02-28T21:17:37.443303Z",
+     "iopub.status.busy": "2023-02-28T21:17:37.442591Z",
+     "iopub.status.idle": "2023-02-28T21:17:37.457530Z",
+     "shell.execute_reply": "2023-02-28T21:17:37.456932Z"
     },
     "papermill": {
-     "duration": 0.024138,
-     "end_time": "2023-07-31T19:58:52.863120",
+     "duration": 0.019606,
+     "end_time": "2023-02-28T21:17:37.458951",
      "exception": false,
-     "start_time": "2023-07-31T19:58:52.838982",
+     "start_time": "2023-02-28T21:17:37.439345",
      "status": "completed"
     },
     "tags": []
@@ -257,16 +257,16 @@
    "id": "53a58933",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-31T19:58:52.871711Z",
-     "iopub.status.busy": "2023-07-31T19:58:52.870799Z",
-     "iopub.status.idle": "2023-07-31T20:05:03.498645Z",
-     "shell.execute_reply": "2023-07-31T20:05:03.496835Z"
+     "iopub.execute_input": "2023-02-28T21:17:37.465445Z",
+     "iopub.status.busy": "2023-02-28T21:17:37.464951Z",
+     "iopub.status.idle": "2023-02-28T21:23:38.618282Z",
+     "shell.execute_reply": "2023-02-28T21:23:38.617564Z"
     },
     "papermill": {
-     "duration": 370.650793,
-     "end_time": "2023-07-31T20:05:03.517553",
+     "duration": 361.167697,
+     "end_time": "2023-02-28T21:23:38.629257",
      "exception": false,
-     "start_time": "2023-07-31T19:58:52.866760",
+     "start_time": "2023-02-28T21:17:37.461560",
      "status": "completed"
     },
     "tags": []
@@ -276,8 +276,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-31 20:04:18,294 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/540997912\n",
-      "2023-07-31 20:04:42,427 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/540653508\n"
+      "2023-02-28 21:22:48,061 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/540997912\n",
+      "2023-02-28 21:23:13,287 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/540653508\n"
      ]
     },
     {
@@ -338,16 +338,16 @@
    "id": "1d72ff29",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-31T20:05:03.533418Z",
-     "iopub.status.busy": "2023-07-31T20:05:03.533045Z",
-     "iopub.status.idle": "2023-07-31T20:05:03.548397Z",
-     "shell.execute_reply": "2023-07-31T20:05:03.547560Z"
+     "iopub.execute_input": "2023-02-28T21:23:38.644197Z",
+     "iopub.status.busy": "2023-02-28T21:23:38.643423Z",
+     "iopub.status.idle": "2023-02-28T21:23:38.654318Z",
+     "shell.execute_reply": "2023-02-28T21:23:38.653799Z"
     },
     "papermill": {
-     "duration": 0.026143,
-     "end_time": "2023-07-31T20:05:03.550464",
+     "duration": 0.019953,
+     "end_time": "2023-02-28T21:23:38.655781",
      "exception": false,
-     "start_time": "2023-07-31T20:05:03.524321",
+     "start_time": "2023-02-28T21:23:38.635828",
      "status": "completed"
     },
     "tags": []
@@ -438,21 +438,21 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.8.16"
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 375.859032,
-   "end_time": "2023-07-31T20:05:04.379741",
+   "duration": 365.819005,
+   "end_time": "2023-02-28T21:23:39.080855",
    "environment_variables": {},
    "exception": null,
    "input_path": "doc_template/examples_root/examples/nb/cell_specimen_mapping.ipynb",
-   "output_path": "/tmp/tmp_w_agyz_/scratch_nb.ipynb",
+   "output_path": "/tmp/tmpl_d6td6_/scratch_nb.ipynb",
    "parameters": {
-    "output_dir": "/tmp/tmp_w_agyz_",
+    "output_dir": "/tmp/tmpl_d6td6_",
     "resources_dir": "/home/runner/work/AllenSDK/AllenSDK/allensdk/internal/notebooks/resources"
    },
-   "start_time": "2023-07-31T19:58:48.520709",
+   "start_time": "2023-02-28T21:17:33.261850",
    "version": "2.4.0"
   }
  },
